kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: ai-platform-network-policy
  namespace: ai-platform

spec:

  podSelector: {}

  policyTypes:
  - Ingress
  - Egress
